test/expected/explain_la_rrn.out
explain [&,&i]
           ^
12: error: default capture is already by reference
